# lambdaconf-2015-web

./: .gitignore  README.md  ex1-json.md  ex2-stm.md  ex3-db.md  ex4-esqueleto.md  ex5-digestive.md  ex6-heroku.md
ex1-json/: ex1-json.cabal
ex1-json/src/: Main.hs
ex2-stm-solution/: ex2-stm.cabal
ex2-stm-solution/src/: Main.hs
ex2-stm/src/: Main.hs
ex3and4-db/: ex3and4-db.cabal
ex3and4-db/src/: Main.hs
ex5-digestive/: ex5-digestive.cabal
ex5-digestive/src/: Db.hs  Main.hs
p1-routing/: p1-routing.cabal
p1-routing/src/: Main.hs
p2-html/: p2-html.cabal
p2-html/src/: Main.hs
p3-db/: p3-db.cabal
p3-db/src/: Db.hs  Main.hs
p4-digestive/: p4-digestive.cabal
p4-digestive/src/: Main.hs
p5-middleware/: p5-middleware.cabal
p5-middleware/src/: Main.hs
p5-middleware/static/: index.html
