name:                ex1-json
version:             0.1.0.0
synopsis:            LambdaConf 2015 Haskell web workshop - Exercise 1 - JSON
-- description:         
homepage:            https://github.com/serras/lambdaconf-2015-web
-- license:             
license-file:        LICENSE
author:              Alejandro Serrano
maintainer:          trupill@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable ex1-json
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010
