name:                ex1-json
version:             0.1.0.0
synopsis:            LambdaConf 2015 Haskell web workshop - Exercise 1 - JSON
homepage:            https://github.com/serras/lambdaconf-2015-web
author:              Alejandro Serrano
maintainer:          trupill@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable ex1-json
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       Spock >= 0.7 && < 1,
                       aeson >= 0.8 && < 1
  hs-source-dirs:      src
  default-language:    Haskell2010
