name:                ex2-stm
version:             0.1.0.0
synopsis:            LambdaConf 2015 Haskell web workshop - Exercise 2 - STM
homepage:            https://github.com/serras/lambdaconf-2015-web
author:              Alejandro Serrano
maintainer:          trupill@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable ex2-stm
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       Spock >= 0.7 && < 1,
                       stm >= 2.4 && < 3,
                       transformers >= 0.3 && < 0.5,
                       text
  hs-source-dirs:      src
  default-language:    Haskell2010
