name:                ex3and4-db
version:             0.1.0.0
synopsis:            LambdaConf 2015 Haskell web workshop - Exercises 3 and 4 - Database
homepage:            https://github.com/serras/lambdaconf-2015-web
author:              Alejandro Serrano
maintainer:          trupill@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable ex3and4-db
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       Spock >= 0.7 && < 1,
                       persistent >= 2.1 && < 3,
                       persistent-template >= 2.1 && < 3,
                       persistent-sqlite >= 2.1 && < 3,
                       monad-logger >= 0.3 && < 0.4,
                       text,
                       transformers,
                       http-types,
                       esqueleto >= 2.1 && < 3
  hs-source-dirs:      src
  default-language:    Haskell2010
