name:                p2-html
version:             0.1.0.0
synopsis:            LambdaConf 2015 Haskell web workshop - Part 2 - HTML
homepage:            https://github.com/serras/lambdaconf-2015-web
author:              Alejandro Serrano
maintainer:          trupill@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable p1-routing
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       Spock >= 0.7 && < 1,
                       text,
                       blaze-html >= 0.8 && < 1,
                       shakespeare >= 2 && <3
  hs-source-dirs:      src
  default-language:    Haskell2010
